# GoodWe2MQTT

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.mqtt.yml  docker-compose.yml  goodwe2mqtt.py  goodwe2mqtt.yaml  logger.py  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/archive/baseline_init_20260123/: metadata.json  plan.md
conductor/archive/dockerization_20260124/: index.md  metadata.json  spec.md
conductor/archive/docs_resilience_ci_20260124/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/baseline_init_20260123/: index.md  plan.md  spec.md
conductor/tracks/dockerization_20260124/: plan.md
conductor/tracks/docs_resilience_ci_20260124/: plan.md
docs/: architecture.md  dependency_management.md  docker.md  ems_mode_integration_plan.md  mqtt_api.md
src/: __init__.py  goodwe2mqtt.py  logger.py  sec1000s_protocol.py
tests/: conftest.py  test_config.py  test_config_env.py  test_inverter.py  test_logger.py  test_mqtt.py  test_resilience.py  test_sec1000s_mqtt.py  test_sec1000s_protocol.py  test_write_setting.py
tools/: sec1000s_test.py
