[tool.poetry]
name = "goodwe2mqtt"
version = "0.1.0"
description = "GoodWe inverter bridge to MQTT"
authors = ["GoodWe2MQTT contributors"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiomqtt = "^2.5.1"
goodwe = "^0.4.10"
paho-mqtt = "^2.1.0"
python-dateutil = "^2.9.0.post0"
pytz = "^2026.1.post1"
pyyaml = "^6.0.3"
six = "^1.17.0"
tzdata = "^2026.1"
tzlocal = "^5.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
ruff = "*"
mypy = "*"
types-pytz = "*"
types-pyyaml = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
