[tool.poetry]
name = "goodwe2mqtt"
version = "0.1.0"
description = "GoodWe inverter bridge to MQTT"
authors = ["GoodWe2MQTT contributors"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiomqtt = "^2.5.1"
goodwe = "^0.4.10"
pytz = "^2026.1.post1"
tzdata = "^2026.1"
tzlocal = "^5.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
ruff = "*"
mypy = "*"
types-pytz = "*"
types-tzlocal = "^5.1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
